--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,118 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+* {
+	box-sizing: border-box;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+a {
+	text-decoration: none;
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+p {
+	margin: 0;
+}
+
+.search-form {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding-top: 30px;
+}
+
+.search-form input {
+	width: 20%;
+	border-radius: 5px 0 0 5px;
+	// border: none;
+	// outline: none;
+	background-color: #fff;
+	padding: 8px 10px;
+}
+
+.search-form button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: none;
+	background-color: #e4dcdc;
+	border-radius: 0 5px 5px 0;
+	padding: 8px 20px;
+	cursor: pointer;
+}
+
+.search-form button:hover {
+	background-color: rgba(224, 224, 224, 0.5);
+	transition: all 0.3s;
+}
+
+.load-more.is-hidden {
+	display: none;
+}
+
+.load-more {
+		display: flex;			
+			align-items: center;
+			margin-left: auto;
+			margin-right: auto;
+			border: none;
+			background-color: #089933;
+			color: #ffffff;
+			border-radius: 5px;
+			padding: 8px 20px;
+			cursor: pointer;
+}
+.container {
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-bottom: 20px;
+}
+
+.gallery,
+.info {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.gallery {
+	margin-left: -20px;
+	padding-top: 30px;
+	justify-content: center;
+}
+
+.gallery__link {
+	margin-top: 20px;
+	margin-left: 20px;
+	min-width: 320px;
+	flex-basis: calc((100% - 80px) / 4);
+	border: none;
+	border-radius: 10px;
+	overflow: hidden;
+	transition: all 0.3s;
+}
+
+.gallery__link:hover,
+.gallery__link:focus {
+	transform: scale(1.05);
+}
+
+.gallery-item {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
+.gallery-item__img {
+	display: block;
+	height: 30vh;
+	object-fit: cover;
+}
+
+.info {
+	padding: 10px;
+	justify-content: space-around;
+}
+
+.info-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	color: rgb(41, 40, 40);
+	font-size: smaller;
 }
